# streamfinity-fastapi

./: Dockerfile  README.md  db.py  movies.json  pyproject.toml  requirements.txt  schemas.py  streamfinity.py
.github/workflows/: main.yaml
app/: db.py  streamfinity.py
app/routers/: actors.py  movies.py  subscriptions.py  token.py  users.py
app/security/: hashing.py
db/: streamfinity.db
k8s/: deployment.yaml
routers/: actors.py  movies.py  subscriptions.py  token.py  users.py
schemas/: movie_actor_schema.py  subscription_schema.py  user_schema.py
security/: hashing.py
streamfinity_fastapi/: db.py  streamfinity.py
streamfinity_fastapi/db/: streamfinity.db
streamfinity_fastapi/routers/: actors.py  movies.py  subscriptions.py  token.py  users.py
streamfinity_fastapi/schemas/: movie_actor_schema.py
streamfinity_fastapi/security/: hashing.py
tests/: conf_test.py  conftest.py  test_actor_api.py  test_actors_api.py  test_get_movies.py  test_movies_api.py  test_subscriptions.py  test_users_api.py
tests/db/: streamfinity_test.db
